# neulix_interface

./: .gitignore  README.md  pyproject.toml  release.py
FinanceInsightX/: Dockerfile  docker-compose.yml  home.py  requirements.txt
FinanceInsightX/assets/: base.css  dashboard.css  home.css  login.css
FinanceInsightX/pages/: dashboards.py  login.py
